@@ -1,1 +1,19 @@
 FROM gradle:5.4.1-jdk8
+
+# download and install Android SDK
+# https://developer.android.com/studio/#downloads
+ARG ANDROID_SDK_VERSION=4333796
+ENV ANDROID_HOME /opt/android-sdk
+RUN mkdir -p ${ANDROID_HOME} && cd ${ANDROID_HOME} && \
+    wget -q https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_VERSION}.zip && \
+    unzip *tools*linux*.zip && \
+    rm *tools*linux*.zip
+
+# set the environment variables
+# ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+# ENV GRADLE_HOME /opt/gradle
+# ENV KOTLIN_HOME /opt/kotlinc
+# ENV PATH ${PATH}:${GRADLE_HOME}/bin:${KOTLIN_HOME}/bin:${ANDROID_HOME}/emulator:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools/bin
+# ENV _JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
+# WORKAROUND: for issue https://issuetracker.google.com/issues/37137213
+# ENV LD_LIBRARY_PATH ${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib
